# jacob-kanban-project

./: README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  gen_secrte.py  pyproject.toml  websocket_test.html
backend/app/: crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/auth/: jwt.py
backend/app/core/: security.py
backend/app/crud/: classes.py  help_request.py  stage.py  task.py  time_tracking.py  user.py
backend/app/models/: __init__.py  classes.py  help_request.py  stage_config.py  task.py  task_history.py  user.py
backend/app/routers/: admin.py  auth.py  classes.py  help_request.py  stage.py  task.py  time_tracking.py  user.py  websocket.py
backend/app/schemas/: __init__.py  classes.py  help_request.py  stage.py  task.py  time_tracking.py  token.py  user.py
backend/app/utils/: async_utils.py  background_tasks.py  security.py  websocket_manager.py
backend/tests/: test_class.py
frontend/: .gitignore  package-lock.json  package.json  tsconfig.json
frontend/src/: middleware.ts
frontend/src/api/: admin.ts  helpRequests.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/auth/: LoginForm.tsx
frontend/src/hooks/: useAuth.ts  useAuth.tsx  useHelpRequests.ts  useRealtimeUpdates.ts
frontend/src/lib/: api.ts  socket.ts  utils.ts  websocket.ts
frontend/src/store/: adminStore.ts  authStore.ts  helpRequestStore.ts  statisticsStore.ts  taskStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: tokenUtils.ts
(+44 files in other folders)
